# faber

./: .gitignore  .prettierrc  AGENTS.md  ANALYSIS.md  CLAUDE.md  Cargo.toml  DEVELOPER.md  EBNF.md  GLYPH.md  GRAMMAR.md  ISSUE-novum-postfix.md  README.md  TLA.md  caretaker.md  eslint.config.mjs  glyph-go  go.work  go.work.sum  nanus-go  package.json  project.yaml  test-emulated.fab  test-unsupported.fab  test_unicode.fab  tsconfig.faber.json  tsconfig.json  tsconfig.nanus.json
compilers/radix-rs/: Cargo.toml  README.md  rustfmt.toml
compilers/radix-rs/src/: exempla_e2e_test.rs  lib.rs  lib_test.rs  main.rs  main_test.rs
compilers/radix-rs/src/codegen/: mod.rs  names.rs  writer.rs
compilers/radix-rs/src/diagnostics/: catalog.rs  diagnostic.rs  mod.rs  render.rs
compilers/radix-rs/src/driver/: mod.rs  mod_test.rs  project.rs  project_test.rs
compilers/radix-rs/src/hir/: mod.rs  nodes.rs
compilers/radix-rs/src/lexer/: scan.rs  scan_test.rs  token.rs
compilers/radix-rs/src/parser/: decl.rs  mod.rs  mod_test.rs  stmt.rs
compilers/radix-rs/src/semantic/: error.rs  types.rs  types_test.rs
compilers/radix-rs/src/syntax/: mod.rs  visit.rs
compilers/radix-rs/tests/: hygiene.rs
crates/faber/: Cargo.toml  build.rs
crates/faber/src/: cli_test.rs  explain.rs  explain_render.rs  explain_test.rs  lib.rs  library.rs  main.rs  package.rs  package_test.rs
crates/faber/src/cli/: mod.rs
crates/faber/src/commands/: explain.rs  init.rs  mod.rs  run.rs  test.rs
crates/radix/: Cargo.toml
crates/radix/src/: cli.rs  cli_test.rs  exempla_e2e_test.rs  lib.rs  lib_test.rs  tool.rs  tool_test.rs
crates/radix/src/codegen/: mod.rs  names.rs  writer.rs
crates/radix/src/diagnostics/: catalog.rs  diagnostic.rs  mod.rs  render.rs
crates/radix/src/driver/: mod.rs  mod_test.rs  session.rs  session_test.rs  source.rs  source_test.rs
crates/radix/src/exempla_e2e/: common.rs  go.rs  llvm.rs  mod.rs  roundtrip.rs  rust.rs  ts.rs  types.rs  wasm.rs  wasm_behavior_fixtures.rs  wasm_behavior_fixtures_test.rs  wasm_expectations.rs  wasm_host.rs  wasm_host_test.rs
crates/radix/src/hir/: mod.rs  nodes.rs  visit.rs
crates/radix/src/lexer/: cursor.rs  keywords.rs  mod.rs  scan.rs  scan_test.rs  token.rs
crates/radix/src/mir/: dump.rs  llvm_ir.rs  llvm_ir_test.rs  llvm_text.rs  llvm_text_test.rs  lower.rs  lower_test.rs  mod.rs  nodes.rs  nodes_test.rs  rust_probe.rs  rust_probe_test.rs  validate.rs  validate_test.rs  visit.rs  visit_test.rs  wasm_text.rs  wasm_text_test.rs
crates/radix/src/parser/: decl.rs  error.rs  expr.rs  mod.rs  mod_test.rs  pattern.rs  stmt.rs  types.rs
crates/radix/src/semantic/: error.rs  mod.rs  scope.rs  types.rs  types_test.rs
crates/radix/src/syntax/: ast.rs  mod.rs  span.rs  visit.rs
crates/radix/src/tool/: cli.rs  commands.rs  mod.rs
crates/radix/tests/: hygiene.rs
fabricae/cpp/http-demo/: CMakeLists.txt  README.md
fabricae/cpp/http-demo/fons/: main.fab
fabricae/cpp/http-demo/src/: main.cpp
radix/crates/norma/: Cargo.toml  json.rs  lib.rs
radix/crates/norma/hal/: arca.rs  processus.rs  solum.rs
radix/crates/radix/: Cargo.toml
radix/crates/radix/src/: cli.rs  cli_test.rs  exempla_e2e_test.rs  lib.rs  (+3 more)
(+2777 files in other folders)
