[package]
name = "faber"
version = "0.34.0"
edition = "2021"
description = "Faber project and package tool"
license = "MIT"

[lib]
name = "faber"
path = "src/lib.rs"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
radix = { path = "../radix" }
clap = { version = "4.5", features = ["derive"] }
