[package]
name = "norma"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
libc = "0.2"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "process", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "mysql", "any"] }
async-stream = "0.3"
futures = "0.3"
